--- a/app/templates/ansible/group_vars/all.yml.erb
+++ b/app/templates/ansible/group_vars/all.yml.erb
@@ -4,6 +4,7 @@ server_name: <%= server_name %>
 ruby_version: <%= ruby_version %>
 
 user_name: vagrant
+group_name: vagrant
 
 postgresql_db_name: <%= postgresql_db_name %>
 postgresql_db_user: <%= postgresql_db_user %>
