--- a/app/views/dashboard/_postgresql.html.slim
+++ b/app/views/dashboard/_postgresql.html.slim
@@ -1,4 +1,3 @@
-h3 PostgreSQL
 .row
   .col-lg-4
     .form-group
@@ -12,3 +11,4 @@ h3 PostgreSQL
     .form-group
       label for='postgresql_db_password' Database Password
       input.form-control id='postgresql_db_password' name='postgresql_db_password' type='text'
+p.text-info <mark>database.yml</mark> will be automatically created based on the above params. Your old <mark>database.yml</mark> (if any) will be backed up.
