--- a/app/assets/stylesheets/all/layout.css.scss
+++ b/app/assets/stylesheets/all/layout.css.scss
@@ -12,17 +12,17 @@ footer {
   padding-bottom: 50px;
 }
 
-.row {
-  overflow: hidden; 
-  &.step {
-    border-bottom: 1px solid #fff;
-  }
-}
+// .row {
+//   overflow: hidden; 
+//   &.step {
+//     border-bottom: 1px solid #fff;
+//   }
+// }
 
-.step-number[class*="col-"] {
-  margin-bottom: -99999px;
-  padding-bottom: 99999px;
-}
+// .step-number[class*="col-"] {
+//   margin-bottom: -99999px;
+//   padding-bottom: 99999px;
+// }
 
 #start {
   padding-top: 40px;
