Add Mongo and ORMs support

--- a/app/assets/stylesheets/all/layout.css.scss
+++ b/app/assets/stylesheets/all/layout.css.scss
@@ -7,9 +7,9 @@ footer {
   }
 }
 
-.step:last-child .col-lg-12 {
-  padding-top: 10px;
-  padding-bottom: 50px;
+.step:last-child .col-lg-12 button {
+  margin-top: 10px;
+  margin-bottom: 50px;
 }
 
 // .row {
