--- a/app/views/dashboard/_mysql.html.slim
+++ b/app/views/dashboard/_mysql.html.slim
@@ -1,14 +1,16 @@
 .row
-  .col-lg-4
+  .col-lg-2
+    = render 'sql_orms', db: 'mysql'
+  .col-lg-3
     .form-group
       label for='mysql_db_name' Database Name
       input.form-control id='mysql_db_name' name='mysql_db_name' type='text' ng-model='db.name'
-  .col-lg-4
+  .col-lg-3
     .form-group
       label for='mysql_db_user' Database User
       input.form-control id='mysql_db_user' name='mysql_db_user' type='text' ng-model='db.user'
-  .col-lg-4
+  .col-lg-3
     .form-group
       label for='mysql_db_password' Database Password
       input.form-control id='mysql_db_password' name='mysql_db_password' type='text'
-p.text-info <mark>database.yml</mark> will be automatically created based on the above params. Your old <mark>database.yml</mark> (if any) will be backed up.
+= render 'sql_config'
