--- a/app/views/dashboard/_sql_config.html.slim
+++ b/app/views/dashboard/_sql_config.html.slim
@@ -1,1 +1,2 @@
-p <mark>{{sqlConfigPath}}</mark> will be automatically created based on the above params. Your old <mark>{{sqlConfigPath}}</mark> (if any) will be backed up.
+p ng-show='sqlConfigPath' <mark>{{sqlConfigPath}}</mark> will be automatically created based on the above params. Your old <mark>{{sqlConfigPath}}</mark> (if any) will be backed up.
+p ng-hide='sqlConfigPath' No configuration files will be created.
