DRY out test parameters

--- a/app/views/dashboard/_postgresql.html.slim
+++ b/app/views/dashboard/_postgresql.html.slim
@@ -12,5 +12,5 @@
   .col-lg-3
     .form-group
       label for='postgresql_db_password' Database Password
-      input.form-control id='postgresql_db_password' name='postgresql_db_password' type='text'
+      input.form-control id='postgresql_db_password' name='postgresql_db_password' type='text' placeholder='optional'
 = render 'sql_config'
