--- a/app/views/dashboard/_mysql.html.slim
+++ b/app/views/dashboard/_mysql.html.slim
@@ -12,5 +12,5 @@
   .col-lg-3
     .form-group
       label for='mysql_db_password' Database Password
-      input.form-control id='mysql_db_password' name='mysql_db_password' type='text'
+      input.form-control id='mysql_db_password' name='mysql_db_password' type='text' placeholder='optional'
 = render 'sql_config'
