--- a/app/views/dashboard/_mongodb.html.slim
+++ b/app/views/dashboard/_mongodb.html.slim
@@ -3,11 +3,11 @@
     .form-group
       .radio
         label
-          input name='mongodb_orm' type='radio' checked='true' value='' ng-model='mongodbOrm'
+          input name='mongodb_orm' type='radio' value='' ng-model='mongodbOrm'
           ' Do not configure
       .radio
         label
-          input name='mongodb_orm' type='radio' checked='true' value='mongoid' ng-model='mongodbOrm'
+          input name='mongodb_orm' type='radio' value='mongoid' ng-model='mongodbOrm'
           ' Mongoid
       .radio
         label
