--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -77,7 +77,7 @@
       .col-lg-1.step-number
         h1 3
       .col-lg-11.step-conf
-        h1 Databases
+        h1 Databases, caching and search
         div role='tabpanel'
           ul.nav.nav-tabs role='tablist'
             - databases.each do |db|
