--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,14 +13,14 @@ html lang="en"
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
 
   body ng-app='app.rubyops'
-    nav.navbar.navbar-inverse.navbar-fixed-top
+    nav.navbar.navbar-fixed-top.navbar-default
       .container
         .navbar-header
           button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="/"= site_name
+          a.navbar-brand href="/" <span>rails</span>box
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
             li.active
