--- a/app/templates/ansible/group_vars/all.yml.erb
+++ b/app/templates/ansible/group_vars/all.yml.erb
@@ -1,36 +1,17 @@
 ---
-app_name: <%= vm_name %>
-server_name: <%= server_name %>
-ruby_version: <%= ruby_version %>
+app_name: <%= params[:vm_name] %>
+
+<% params.each do |k, v| -%>
+  <% unless v.respond_to?(:each) -%>
+<%= k %>: <%= v %>
+  <% end %>
+<% end %>
 
 user_name: vagrant
 group_name: vagrant
 
-<% if databases.include? 'postgresql' -%>
-postgresql_db_name: <%= postgresql_db_name %>
-postgresql_db_user: <%= postgresql_db_user %>
-postgresql_db_password: <%= postgresql_db_password %>
-postgresql_orm: <%= postgresql_orm %>
-<% end %>
-
-<% if databases.include? 'mysql' -%>
-mysql_db_name: <%= mysql_db_name %>
-mysql_db_user: <%= mysql_db_user %>
-mysql_db_password: <%= mysql_db_password %>
-mysql_orm: <%= mysql_orm %>
-<% end %>
-
-<% if databases.include? 'mongodb' -%>
-mongodb_db_name: <%= mongodb_db_name %>
-mongodb_orm: <%= mongodb_orm %>
-<% end %>
-
-<% if databases.include? 'redis' -%>
-redis_orm: <%= redis_orm %>
-<% end %>
-
-ssl_certificate_path: /etc/nginx/ssl/<%= server_name %>.crt
-ssl_certificate_key_path: /etc/nginx/ssl/<%= server_name %>.key
+ssl_certificate_path: /etc/nginx/ssl/<%= params[:server_name] %>.crt
+ssl_certificate_key_path: /etc/nginx/ssl/<%= params[:server_name] %>.key
 
 app_path: /vagrant
 app_public_path: "{{ app_path }}/public"
