--- a/app/templates/ansible/site.yml.erb
+++ b/app/templates/ansible/site.yml.erb
@@ -3,8 +3,8 @@
   gather_facts: no
   roles:
     - base
-<% databases.each do |db_role| -%>
-    - <%= db_role %>
+<% (params[:databases] + params[:background_jobs]).each do |role| -%>
+    - <%= role %>
 <% end %>
     - webserver
     - dbserver
